fix navbar collapse

--- a/journal/static/journal/base_user/css/style.css
+++ b/journal/static/journal/base_user/css/style.css
@@ -69,16 +69,17 @@ button {
 }
 
 .sidebar-menu-icon {
-  position: relative;
-  top:100px;
-  left: 180px;
+  position: absolute;
+  top: 100px;
+  left: 200px;
   color: rgb(128, 128, 128);
 }
 
 .button-2 {
   display: none;
   position: absolute;
-  top: -90px;
-  left: -190px;
+  top: -95px;
+  left: -200px;
+  width: 100%;
 }
 
